moz blur and z-index nav fix

--- a/src/components/NavItems/NavItems.module.scss
+++ b/src/components/NavItems/NavItems.module.scss
@@ -7,6 +7,7 @@ $hamburger-layer-spacing: 4px;
 
 .NavItems {
     display: inline-block;
+    z-index: 0;
     ul {
         list-style: none;
         margin: 0;
@@ -54,6 +55,7 @@ $hamburger-layer-spacing: 4px;
         height: 100%;
         background: rgba(0, 0, 0, 0.2);
         backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px);
         visibility: hidden;
         opacity: 0;
         transition: .2s;
