--- a/src/containers/Layout/Layout.module.scss
+++ b/src/containers/Layout/Layout.module.scss
@@ -18,6 +18,8 @@
         width: 100%;
         height: 100%;
         backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px);
+        z-index: -1;
     }
     @media (max-width: 767px) {
         padding: 20px 30px;
